# toRustCalcMCP

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCKER_HUB_QUICK_START.md  DOCKER_HUB_SETUP.md  Dockerfile  GETTING_STARTED.md  INSTALL.md  LICENSE  MCP_FIX_REQUIRED.md  MCP_REGISTRIES_GUIDE.md  MCP_REGISTRY_CONFIG.json  MCP_SO_COPY_PASTE.txt  MCP_SO_SUBMISSION.md  MCP_SUBMISSION_GUIDE.md  MCP_TEST_RESULTS.md  MCP_TOOL_SCHEMA.json  PUBLISH_TO_REGISTRIES.md  QUICKSTART.md  README.md  REGISTRY_SUMMARY.md  SESSION_SUMMARY.md  TEST_VALIDATION_REPORT.md  WEB_INTERFACE.md  eval.rs  install.sh  mcp.rs  number.rs
.github/workflows/: ci.yml  release.yml
docs/: MCP_TOOL_SCHEMA.json  book.toml  index.html
docs/book/: 404.html  examples.html  functions-list.html  functions-math.html  functions-string.html  functions.html  intro.html  print.html  quick-start.html  searcher-09f2665d.js  searchindex-549afdd9.js  toc-2b6e20ca.js  toc.html
docs/book/topics/: assoc.html  builtin.html  config.html  define.html  error.html  expression.html  file.html  intro.html  list.html  mat.html  mcp.html  number.html  operator.html  resource.html  statement.html  string.html  type.html  usage.html  variable.html
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  INSTALL.md  USAGE.md  WEB_INTERFACE.md
docs/mcp_functions/: README.md  advanced-operations.md  command-script.md  core-math.md  crypto-hashing.md  error-handling.md  file-io.md  final-functions.md  hash-arrays.md  io-formatting.md  lists.md  math-extensions.md  memory-stack.md  modular-arithmetic.md  obscure-trig.md  strings.md  system-utility.md  variables-scope.md
docs/registry/: MCP_SUBMISSION_GUIDE.md
docs/src/: SUMMARY.md  examples.md  functions.md  intro.md  quick-start.md
examples/: mcp-config.json
src/: bin_rcalc.rs  bin_web.rs  builtins.rs  cli.rs  config.rs  eval.rs  help.rs  lexer.rs  lib.rs  main.rs  mcp.rs  number.rs  parser.rs  value.rs
tests/: integration.rs  mcp.rs
web/: app.js  index.html  style.css
(+19 files in other folders)
