[package]
name = "torustcalcmcp"
version = "0.1.0"
edition = "2021"
description = "A Rust port of calc (lcn2/calc): exact-rational calculator usable as the `rcalc` CLI and as an MCP (JSON-RPC 2.0) server."
license = "LGPL-2.1"
authors = ["Elis Javier Mendez Perez"]
repository = "https://github.com/carlomagnoglobal/toRustCalcMCP"
homepage = "https://github.com/carlomagnoglobal/toRustCalcMCP"
readme = "README.md"
keywords = ["calculator", "arbitrary-precision", "mcp", "math"]
categories = ["mathematics", "command-line-utilities"]

# One codebase, two front-ends. `toRustCalcMCP` auto-detects MCP vs CLI;
# `rcalc` is a convenience binary that is always the calculator CLI.
[[bin]]
name = "toRustCalcMCP"
path = "src/main.rs"

[[bin]]
name = "rcalc"
path = "src/bin_rcalc.rs"

[lib]
name = "torustcalcmcp"
path = "src/lib.rs"

[dependencies]
num-bigint  = "0.4"
num-rational = "0.4"
num-integer = "0.1"
num-traits  = "0.2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha1        = "0.10"
md5         = "0.7"
crc         = "3.0"
rustyline   = "14"
tiny_http   = "0.12"

[[bin]]
name = "rcalc-web"
path = "src/bin_web.rs"

[profile.release]
opt-level = 3
lto = true
